--- a/main.kv
+++ b/main.kv
@@ -75,7 +75,7 @@
             sise:root.size[0]/6,root.size[1]
             size_hint_y:None
             on_press:
-                app.open_gps_info_screen(root.trail_name,root.username,root.date,root.distance,root.description,root.trail_id)
+                app.open_trail_info_screen(root.trail_name,root.username,root.date,root.distance,root.description,root.trail_id)
 
 <UserTime@Wp>
     username: "test"
