--- a/main.kv
+++ b/main.kv
@@ -3,7 +3,7 @@
 
 <SavedTrail@Wp>
     name: "test"
-    discription: "test"
+    description: "test"
     pos:root.pos
     FloatLayout:
         pos:root.pos
@@ -13,7 +13,7 @@
             pos:root.pos
         Label:
             id:sec_text
-            text: root.discription
+            text: root.description
             pos:root.pos[0] + root.size[0]/3, root.pos[1] 
         Button:
             id:main_button
@@ -46,7 +46,7 @@
     username: "test"
     date: "test"
     distance: "test"
-    discription: "test"
+    description: "test"
     trail_id: 0
     pos:root.pos
     size_hint_y: None
